<resources>
    <string name="app_name">MyCurrencies</string>
    <string name="for_text">Foreign Currency</string>
    <string name="hom_text">Home Currency</string>
    <string name="for_edit">Enter foreign currency amount here</string>
    <string name="hom_cal">Calculated result in home currency</string>
    <string name="btn_cal">Calculate</string>
    <string name="enter_amount">Enter Amount Here</string>
    <string name="search">Enter the query information</string>

    <string name="Time">Time</string>
    <string name="Original_currency">Foreign</string>
    <string name="Number_of_queries">Amount</string>
    <string name="Target_currency">Home</string>
    <string name="result">Result</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
