<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/yin_se">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_margin="11dp"
            android:src="@drawable/search" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search"
            android:singleLine="true"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_margin="11dp"
            android:src="@drawable/delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_margin="12dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Time"/>

        <TextView
            android:id="@+id/for_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Original_currency"/>

        <TextView
            android:id="@+id/for_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Number_of_queries"/>

        <TextView
            android:id="@+id/hom_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Target_currency"/>
        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/result"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <ListView
        android:id="@+id/list_view"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>